@@ -1,26 +1,0 @@
-log/
-logs/
-*.log
-tmp/
-*.tmp
-*.bak
-
-target/
-
-.mvn/
-mvnw
-mvnw.cmd
-
-.idea/
-out/
-.idea
-*.iws
-*.iml
-*.ipr
-
-.settings/
-.classpath
-.project
-.apt_generated
-.factorypath
-.springBeans
