@@ -1,52 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <groupId>com.tairanchina.csp.dew</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../modules/parent/</relativePath>
-    </parent>
-
-    <artifactId>rest-cloud-example</artifactId>
-    <name>Dew Rest Cloud 示例</name>
-    <description>Dew Rest Cloud 示例</description>
-    <packaging>jar</packaging>
-    <version>1.0.0-beta4</version>
-
-    <properties>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.tairanchina.csp.dew</groupId>
-            <artifactId>boot-core</artifactId>
-        </dependency>
-        <!-- 引入web依赖 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.tairanchina.csp.dew</groupId>
-            <artifactId>cloud-core</artifactId>
-        </dependency>
-    </dependencies>
-
-</project>
