@@ -1,29 +1,0 @@
-spring:
-  application:
-    name: rest-cloud-example
-
-server:
-  port: 8080
-
-dew:
-  basic:
-    name: rest-cloud
-    version: 1.0
-    desc: desc
-    web-site: www.tairanchina.com
-    format:
-      use-unity-error: true
-      reuse-http-state: true
-    doc:
-      base-package: com.tairanchina
-  security:
-    token-flag: X-API-AUTHORITY
-    token-in-header: true
-    token-hash: true
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://registry:123456@localhost:10000/eureka
-logging:
-  path: ./logs
