@@ -32,7 +32,6 @@ import org.springframework.web.client.RestTemplate;
 
 import javax.annotation.PostConstruct;
 import javax.servlet.http.HttpServletRequest;
-import java.io.IOException;
 import java.net.InetAddress;
 import java.net.URL;
 import java.net.UnknownHostException;
@@ -72,8 +71,7 @@ public class Dew {
             Dew.applicationContext.getBean(DSManager.class);
         }
         Dew.applicationContext.containsBean(EntityContainer.class.getSimpleName());
-
-        EB.applicationName = applicationName;
+        Info.name = applicationName;
         // JDBC Scan
         if (StringUtils.hasLength(Dew.dewConfig.getDao().getBasePackage())) {
             ClassPathScanner scanner = new ClassPathScanner((BeanDefinitionRegistry) ((GenericApplicationContext) Dew.applicationContext).getBeanFactory());
@@ -87,6 +85,8 @@ public class Dew {
         // token存储key
         public static final String TOKEN_INFO_FLAG = "dew:auth:token:info:";
         // Token Id 关联 key : dew:auth:token:id:rel:<code> value : <token Id>
+        public static final String HTTP_REQUEST_FROM_FLAG = "Request-From";
+
         public static final String TOKEN_ID_REL_FLAG = "dew:auth:token:id:rel:";
 
         public static final String MQ_AUTH_TENANT_ADD = "dew.auth.tenant.add";
@@ -117,7 +117,6 @@ public class Dew {
 
         static {
             try {
-                name = Dew.applicationContext.getId();
                 ip = InetAddress.getLocalHost().getHostAddress();
                 host = InetAddress.getLocalHost().getHostName();
                 instance = $.field.createUUID();
@@ -158,68 +157,67 @@ public class Dew {
 
         private static RestTemplate serviceClient;
 
-        private static String applicationName;
-
         public static void setServiceClient(RestTemplate _serviceClient) {
             serviceClient = _serviceClient;
         }
 
-        public static HttpHelper.WrapHead get(String url) {
+        public static HttpHelper.WrapHead get(String url) throws Exception {
             return get(url, null);
         }
 
-        public static HttpHelper.WrapHead get(String url, Map<String, String> header) {
+        public static HttpHelper.WrapHead get(String url, Map<String, String> header) throws Exception {
             return exchange(HttpMethod.GET, url, null, header);
         }
 
-        public static HttpHelper.WrapHead delete(String url) {
+        public static HttpHelper.WrapHead delete(String url) throws Exception {
             return delete(url, null);
         }
 
-        public static HttpHelper.WrapHead delete(String url, Map<String, String> header) {
+        public static HttpHelper.WrapHead delete(String url, Map<String, String> header) throws Exception {
             return exchange(HttpMethod.DELETE, url, null, header);
         }
 
-        public static HttpHelper.WrapHead head(String url) {
+        public static HttpHelper.WrapHead head(String url) throws Exception {
             return head(url, null);
         }
 
-        public static HttpHelper.WrapHead head(String url, Map<String, String> header) {
+        public static HttpHelper.WrapHead head(String url, Map<String, String> header) throws Exception {
             return exchange(HttpMethod.HEAD, url, null, header);
         }
 
-        public static HttpHelper.WrapHead options(String url) {
+        public static HttpHelper.WrapHead options(String url) throws Exception {
             return options(url, null);
         }
 
-        public static HttpHelper.WrapHead options(String url, Map<String, String> header) {
+        public static HttpHelper.WrapHead options(String url, Map<String, String> header) throws Exception {
             return exchange(HttpMethod.OPTIONS, url, null, header);
         }
 
-        public static HttpHelper.WrapHead post(String url, Object body) {
+        public static HttpHelper.WrapHead post(String url, Object body) throws Exception {
             return post(url, body, null);
         }
 
-        public static HttpHelper.WrapHead post(String url, Object body, Map<String, String> header) {
+        public static HttpHelper.WrapHead post(String url, Object body, Map<String, String> header) throws Exception {
             return exchange(HttpMethod.POST, url, body, header);
         }
 
-        public static HttpHelper.WrapHead put(String url, Object body) {
+        public static HttpHelper.WrapHead put(String url, Object body) throws Exception {
             return put(url, body, null);
         }
 
-        public static HttpHelper.WrapHead put(String url, Object body, Map<String, String> header) {
+        public static HttpHelper.WrapHead put(String url, Object body, Map<String, String> header) throws Exception {
             return exchange(HttpMethod.PUT, url, body, header);
         }
 
-        private static HttpHelper.WrapHead exchange(HttpMethod httpMethod, String url, Object body, Map<String, String> header) {
+        private static HttpHelper.WrapHead exchange(HttpMethod httpMethod, String url, Object body, Map<String, String> header) throws Exception {
             try {
+                if (header == null) {
+                    header = new HashMap<>();
+                    header.put(Constant.HTTP_REQUEST_FROM_FLAG, Info.name.toUpperCase());
+                }
                 if (!$.field.isIPv4Address(new URL(url).getHost())) {
                     HttpHeaders headers = new HttpHeaders();
-                    headers.set("Request-From", applicationName.toUpperCase());
-                    if (header != null) {
-                        header.forEach(headers::add);
-                    }
+                    header.forEach(headers::add);
                     tryAttachTokenToHeader(headers);
                     HttpEntity entity;
                     if (body != null) {
@@ -238,9 +236,9 @@ public class Dew {
                 } else {
                     return $.http.request(httpMethod.name(), tryAttachTokenToUrl(url), body, header, null, null, 0);
                 }
-            } catch (IOException e) {
+            } catch (Exception e) {
                 logger.error("EB Process error.", e);
-                return null;
+                throw e;
             }
         }
 
