@@ -1,6 +1,5 @@
 package com.tairanchina.csp.dew.core.interceptor;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnWebApplication;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.servlet.config.annotation.InterceptorRegistry;
@@ -11,14 +10,11 @@ import org.springframework.web.servlet.config.annotation.WebMvcConfigurerAdapter
 @ConditionalOnWebApplication
 public class DewConfigurer extends WebMvcConfigurerAdapter {
 
-    @Value("${spring.application.name}")
-    private String applicationName;
 
     @Override
     public void addInterceptors(InterceptorRegistry registry) {
-        DewHandlerInterceptor dewHandlerInterceptor=  new DewHandlerInterceptor();
-        dewHandlerInterceptor.setApplicationName(applicationName);
-        registry.addInterceptor(dewHandlerInterceptor).excludePathPatterns("/error/**");
+        DewHandlerInterceptor dewHandlerInterceptor = new DewHandlerInterceptor();
+        registry.addInterceptor(dewHandlerInterceptor);
         super.addInterceptors(registry);
     }
 
