@@ -5,9 +5,9 @@ import com.tairanchina.csp.dew.core.Dew;
 import com.tairanchina.csp.dew.core.DewContext;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.servlet.handler.HandlerInterceptorAdapter;
 
+import javax.security.auth.message.AuthException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.net.URLDecoder;
@@ -16,28 +16,20 @@ public class DewHandlerInterceptor extends HandlerInterceptorAdapter {
 
     private static final Logger logger = LoggerFactory.getLogger(DewHandlerInterceptor.class);
 
-    private String applicationName;
-
     @Override
     public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
-        String requestFrom = request.getHeader("Request-From");
+        String requestFrom = request.getHeader(Dew.Constant.HTTP_REQUEST_FROM_FLAG);
         if (Dew.dewConfig.getSecurity().getIncludeServices() != null) {
             for (String v : Dew.dewConfig.getSecurity().getIncludeServices()) {
-                if (!v.equalsIgnoreCase(requestFrom) && !applicationName.equalsIgnoreCase(requestFrom)) {
-                    return false;
+                if (!v.equalsIgnoreCase(requestFrom)) {
+                    throw Dew.e("401", new AuthException("The [" + requestFrom + "] does NOT allow access to this service."),401);
                 }
             }
         }
         if (Dew.dewConfig.getSecurity().getIncludeServices() == null && Dew.dewConfig.getSecurity().getExcludeServices() != null) {
             for (String v : Dew.dewConfig.getSecurity().getExcludeServices()) {
                 if (v.equalsIgnoreCase(requestFrom)) {
-//                    response.sendError(HttpServletResponse.SC_NOT_FOUND,"sssss");
-//                    response.setContentType("application/json");
-//                    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-//                    response.getWriter().write("{\"s\":\"ss\"}");
-////                    response.getWriter().flush();
-                    response.sendRedirect("/error/unauthorized");
-                    return false;
+                    throw Dew.e("401", new AuthException("The [" + requestFrom + "] does NOT allow access to this service."),401);
                 }
             }
         }
@@ -77,11 +69,4 @@ public class DewHandlerInterceptor extends HandlerInterceptorAdapter {
         return super.preHandle(request, response, handler);
     }
 
-    public String getApplicationName() {
-        return applicationName;
-    }
-
-    public void setApplicationName(String applicationName) {
-        this.applicationName = applicationName;
-    }
 }
